fix horizontal scroll...?

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -71,7 +71,7 @@
   background: url("https://res.cloudinary.com/mtreeves24/image/upload/c_scale,f_auto,q_60,w_500/v1600090796/Exotic%20Explorers/covid-19.jpg");
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
-  background-size: 105%;
+  background-size: cover;
   overflow: hidden;
   border-bottom: 0.5em solid white;
   display: grid;
